Fix join block img alignment

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -57,10 +57,10 @@ h2, h3, h4, h5 { font-family: 'Open Sans', 'Arial', sans-serif; font-weight: bol
 #join { background: url('../images/plan-bg.jpg') no-repeat center top; background-size: cover; padding: 3em 0 }
 #join * { color: white }
 #join h2 { color: #B7DF18; margin-bottom: 1.5em }
-#join img { display: block; margin: 0 auto; margin-bottom: 1.5em }
+#join img { display: block; max-height: 61px !important; margin: 0 auto; margin-bottom: 1.5em }
 #join p { font-size: 1em; padding: .8em; text-shadow: 0 1px 1px #333; }
 #join .medium-6 { margin-bottom: 1.6em; }
-#join .program p { min-height: 360px; height: 100%; }
+#join .program p { min-height: 400px; height: 100%; }
 #join .button { font-size: .9em; display: block; margin-top: 10%; color: #333; background: #DBE444; font-weight: bold; opacity: 1 }
 #join .button:hover { background: #B6E017 }
 #join .disabled { background: #fdfede; opacity: .3 }
